mobile header fix z-index overlapped by content

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -4,6 +4,7 @@ header {
     justify-content: space-between;
     box-shadow: 0 0 0 .0625rem rgba(0,0,0,.1);
     position: sticky;
+    z-index: 1;
     top: 0;
     background-color: rgba(255,255,255,.85);
     backdrop-filter: blur(10px);
