--- a/src/style/general.css
+++ b/src/style/general.css
@@ -59,6 +59,7 @@ header {
           box-shadow: 0 0 0 0.0625rem rgba(0, 0, 0, 0.1);
   position: -webkit-sticky;
   position: sticky;
+  z-index: 1;
   top: 0;
   background-color: rgba(255, 255, 255, 0.85);
   -webkit-backdrop-filter: blur(10px);
